<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="me.mjctechguy.clickygame.MainGame"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/buttonClicks"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:onClick="addToTally"
        android:text="@string/clickButton"
        android:textSize="50sp"
        tools:text="@string/clickButton"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="77dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="73dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerAmount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:text="@string/clickAmountText"
        android:textSize="30sp"
        tools:text="@string/clickAmountText"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toLeftOf="@+id/clickTally"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/clickTally"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/buttonClicks"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/clickTally"
        android:layout_width="77dp"
        android:layout_height="43dp"
        android:text="@string/clickAmount"
        android:textSize="30sp"
        tools:text="@string/clickAmount"
        android:layout_marginEnd="26dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="-128dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="198dp"
        android:layout_height="40dp"
        android:text="@string/timeText"
        android:textSize="30sp"
        tools:text="@string/timeText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="73dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerAmount"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:cursorVisible="false"
        android:text="@string/timeAmount"
        android:textSize="30sp"
        tools:text="@string/timeAmount"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:text="@string/restartButton"
        tools:text="@string/restartButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
